# json2rdf

./: Cargo.toml  Makefile  README.md  airplane.json
.github/workflows/: test_build.yml
src/: airplane.json  lib.rs  main.rs  test.rs
tests/: integration_test.rs  invalid_iri_key.json  large_int.json  root_array.json  unicode_key.json
