[package]
name = "json2rdf"
version = "0.1.1"
authors = ["bharath181 <bharathselvaraj18@gmail.com>", "Greg Hanson <g.isaac.hanson@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause OR Apache-2.0"
description = "Library for converting a JSON file to N-Triple RDF"
repository = "https://github.com/DeciSym/json2rdf"
readme = "README.md"
keywords = ["json", "rdf", "semantic-web", "converter", "parser"]
categories = ["command-line-utilities", "encoding", "parser-implementations", "science", "web-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
oxrdf = "0.2"
serde_json = "1.0"

[dev-dependencies]
oxrdfio = "0.1"